--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies",
+  "name": "my-first-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "reactjs-popup": "^2.0.5",
+    "web-vitals": "^1.1.2",
+    "wrapper": "^0.1.0",
+    "wrappers": "^0.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
